fix alignment

--- a/manon/variables/_pagination.scss
+++ b/manon/variables/_pagination.scss
@@ -68,7 +68,7 @@ $pagination-item-width: null !default;
 
 // Nav
 $pagination-justify-content: null !default;
-$pagination-align-items: null !default;
+$pagination-align-items: center;
 $pagination-border-width: null !default;
 $pagination-border-style: null !default;
 $pagination-border-color: null !default;
